# sonicdisk

./: .gitignore  Cargo.toml  README.md
src/: main.rs  path.rs  security.rs  subsonic.rs
