[package]
name = "sonicdisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
dokan = { git = "https://github.com/duckfromdiscord/dokan-rust" }
dokan-sys = { git = "https://github.com/duckfromdiscord/dokan-rust" }
winapi = { version = "0.3.9", features = ["std", "errhandlingapi", "handleapi", "heapapi", "ioapiset", "minwinbase", "minwindef", "ntdef", "ntstatus", "processthreadsapi", "sddl", "securitybaseapi", "synchapi", "winbase", "winerror", "winnt"] }
clap = "2.33.3"
ctrlc = "3.2.3"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
regex = "1.4.3"
windows-permissions = "0.2.4"
widestring = { version = "1.0.2", features = ["std"] }
sunk = { path = "../sunk" }
reqwest = { version = "0.11.22", features = ["blocking"] }
